--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="header">
-  <a routerLink="route1">route1</a>
-  <a routerLink="route2">route2</a>
+  <a routerLink="route1" routerLinkActive="active">route1</a>
+  <a routerLink="route2" routerLinkActive="active">route2</a>
 </div>
-<div class="sub-header">&nbsp;</div>
-<router-outlet></router-outlet>
+<div class="subheader">&nbsp;</div>
+<div class="main">
+  <router-outlet></router-outlet>
+</div>
 <div class="footer">&nbsp;</div>
