--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-  <img routerLink="route1" class="reed-logo" ngSrc="assets/images/reed.png" height="50" width="96">
-  <a routerLink="route1" routerLinkActive="active">route1</a>
-  <a routerLink="route2" routerLinkActive="active">route2</a>
+  <img routerLink="route1" class="reed-logo" ngSrc="assets/images/reed.png" height="50" width="96" [priority]="true">
+  <a routerLink="route1" routerLinkActive="active">css grid</a>
+  <a routerLink="route2" routerLinkActive="active">gridstack</a>
 </div>
 <div class="subheader">&nbsp;</div>
 <div class="main">
