--- a/src/app/modules/pod/components/pod/pod.component.scss
+++ b/src/app/modules/pod/components/pod/pod.component.scss
@@ -12,6 +12,7 @@
 
   &.css-grid {
     width: 300px;
+    height: 178px;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 26%);
     border-radius: 7px;
     cursor: pointer;
