--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,2 +1,13 @@
+$headerBlue: #333C4E;
+$subheaderBlue: #0E85D4;
+
 $podLightColor: #F9F9F3;
 $podDarkColor: #081351;
+
+$piccadilyBlue: #081351;
+$royalBlue: #1E1EF0;
+$victoriaBlue: #6FCFE1;
+$doubleDeckerRed: #E32424;
+$libertyLilac: #7855C3;
+$tottenhamTeal: #19D2C3;
+$primroseHillYellow: #FFEB1E;
