--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <a routerLink="route2" routerLinkActive="active">gridstack</a>
 </div>
 <div class="subheader">&nbsp;</div>
-<div class="main">
+<div class="main" [ngClass]="drawerOpen ? 'drawer-open' : 'drawer-close'">
   <router-outlet></router-outlet>
 </div>
 <div class="footer">&nbsp;</div>
