add pod dropdown

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import 'src/styles/add-pod-dropdown';
 @import 'src/styles/gridstack';
 @import 'src/styles/routes';
 @import 'src/styles/save-button';
