--- a/src/app/modules/drawer/components/drawer/drawer.component.html
+++ b/src/app/modules/drawer/components/drawer/drawer.component.html
@@ -3,6 +3,9 @@
     <span class="material-icons">chevron_right</span>
   </button>
   <div class="contents">
-    <span>herro</span>
+    <p-dropdown placeholder="Add Pod" optionLabel="text" filterBy="text" styleClass="add-pod-dropdown" panelStyleClass="add-pod-dropdown-panel"
+                scrollHeight="300px"
+                [options]="inactivePods" [filter]="true" [disabled]="!willItFit" [resetFilterOnHide]="true"
+                [ngModel]="inactivePod" (ngModelChange)="activatePod($event)"></p-dropdown>
   </div>
 </div>
