--- a/src/app/modules/drawer/components/drawer/drawer.component.scss
+++ b/src/app/modules/drawer/components/drawer/drawer.component.scss
@@ -53,6 +53,6 @@ $animationSpeed: 800ms;
   .contents {
     width: $drawerWidth - 20 * 1px;
     height: 100%;
-    padding: 20px;
+    padding: 20px 11px 20px 20px;
   }
 }
