--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   overflow-y: scroll;
   // font-family: "Lucida Console", sans-serif;
+  // font-family: Roboto, "Helvetica Neue", sans-serif;
   font-family: sans-serif;
   color: #333;
   user-select: none;
