--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="header">
   <ng-container *ngIf="!appConfig.emptyHeader">
     <img routerLink="route1" class="reed-logo" ngSrc="assets/images/reed.png" height="50" width="96" [priority]="true">
-    <a routerLink="route1" routerLinkActive="active">gridstack</a>
-    <a routerLink="route2" routerLinkActive="active">css grid</a>
+    <a routerLink="route1" routerLinkActive="active">Gridstack</a>
+    <a routerLink="route2" routerLinkActive="active">CSS Grid</a>
   </ng-container>
 </div>
 <div class="subheader">&nbsp;</div>
