--- a/src/app/modules/pod/components/pod/pod.component.html
+++ b/src/app/modules/pod/components/pod/pod.component.html
@@ -6,5 +6,5 @@
         </ng-container>
     </div>
     <button class="pod-delete" (click)="delete($event)">&#x2715;</button>
-    <button class="pod-button">{{ pod.buttonText }}</button>
+    <button mat-ripple class="pod-button">{{ pod.buttonText }}</button>
 </div>
