--- a/src/styles/save-button.scss
+++ b/src/styles/save-button.scss
@@ -6,9 +6,10 @@ button.save-button {
   bottom: 45px;
   background-color: $podDarkColor;
   color: #FFF;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
-  padding: 5px 10px;
+  padding: 7px 15px;
   border-radius: 5px;
+  border: none;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 26%);
 }
