--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/add-pod-dropdown';
+@import 'src/styles/bs-switch';
 @import 'src/styles/gridstack';
 @import 'src/styles/routes';
 @import 'src/styles/save-button';
