2nd commit for create pod

--- a/src/app/modules/drawer/components/drawer/drawer.component.html
+++ b/src/app/modules/drawer/components/drawer/drawer.component.html
@@ -10,5 +10,7 @@
 
     <hr>
     <app-saved-pod-configs></app-saved-pod-configs>
+    <hr>
+    <button mat-ripple class="btn-create-pod" (click)="createPod()">Create Pod</button>
   </div>
 </div>
