--- a/src/app/modules/drawer/components/drawer/drawer.component.scss
+++ b/src/app/modules/drawer/components/drawer/drawer.component.scss
@@ -54,5 +54,21 @@ $animationSpeed: 800ms;
     width: $drawerWidth - 20 * 1px;
     height: 100%;
     padding: 20px 11px 20px 20px;
+
+    .btn-create-pod {
+      background-color: $podDarkColor;
+      color: #FFF;
+      font-size: 15px;
+      font-weight: bold;
+      padding: 7px 15px;
+      border-radius: 5px;
+      border: none;
+      box-shadow: 0 2px 5px 0 rgb(0 0 0 / 26%);
+      width: 100%;
+
+      &:hover {
+        background-color: $victoriaBlue;
+      }
+    }
   }
 }
