--- a/src/styles/save-button.scss
+++ b/src/styles/save-button.scss
@@ -12,4 +12,8 @@ button.save-button {
   border-radius: 5px;
   border: none;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 26%);
+
+  &:hover {
+    background-color: $victoriaBlue;
+  }
 }
