--- a/src/app/modules/save-pods-modal/components/save-pods-modal/save-pods-modal.component.scss
+++ b/src/app/modules/save-pods-modal/components/save-pods-modal/save-pods-modal.component.scss
@@ -1,18 +1,10 @@
 @import 'src/styles/colors';
+@import 'src/styles/mixins';
+
+$savePodsModalBorderRadius: 5;
 
 .save-pods-modal-overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  background-color: rgba(0, 0, 0, 0.75);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  $savePodsModalBorderRadius: 5;
+  @include modalOverlay;
 
   .save-pods-modal {
 
@@ -20,22 +12,7 @@
     border: 1px outset #777;
 
     .save-pods-modal-header {
-      background-color: #222;
-      color: #FFF;
-      padding: 15px 20px;
-      border-radius: $savePodsModalBorderRadius * 1px $savePodsModalBorderRadius * 1px 0 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      .icon {
-        position: relative;
-        top: -2px;
-      }
-
-      .text {
-        margin-left: 5px;
-      }
+      @include modalHeader($savePodsModalBorderRadius);
     }
 
     .save-pods-modal-body {
@@ -44,35 +21,7 @@
     }
 
     .save-pods-modal-footer {
-      text-align: right;
-      background-color: #EEE;
-      border-top: 1px solid #DDD;
-      padding: 12px 20px;
-      border-radius: 0 0 $savePodsModalBorderRadius * 1px $savePodsModalBorderRadius * 1px;
-
-      button {
-        border-radius: 5px;
-        margin-left: 12px;
-        min-width: 60px;
-        box-shadow: 0 2px 5px 0 rgb(0 0 0 / 26%);
-        font-size: 15px;
-
-        &.apply-btn {
-          background-color: $podDarkColor;
-          color: #FFF;
-        }
-
-        &.cancel-btn {
-          background-color: #F0F0F0;
-          color: #000;
-          border: 2px outset #CCC;
-        }
-
-        &:disabled {
-          opacity: 0.5;
-          cursor: not-allowed;
-        }
-      }
+      @include modalFooter($savePodsModalBorderRadius);
     }
   }
 }
