--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <img routerLink="route1" class="reed-logo" ngSrc="assets/images/reed.png" height="50" width="96" [priority]="true">
     <a routerLink="route1" routerLinkActive="active">Gridstack</a>
     <a routerLink="route2" routerLinkActive="active">CSS Grid</a>
+    <a routerLink="route3" routerLinkActive="active">Graph</a>
   </ng-container>
 </div>
 <div class="subheader">&nbsp;</div>
