graph and maps commit 2

--- a/src/app/routes/route3/components/route3/route3.component.html
+++ b/src/app/routes/route3/components/route3/route3.component.html
@@ -1,2 +1,2 @@
-<app-graph [options]="options1"></app-graph>
-<app-graph [options]="options2"></app-graph>
+<app-graph [options]="businessActivityOptions"></app-graph>
+<app-graph [options]="performanceOptions"></app-graph>
