--- a/src/app/modules/raynes-park/components/raynes-park/raynes-park.component.html
+++ b/src/app/modules/raynes-park/components/raynes-park/raynes-park.component.html
@@ -1,8 +1,7 @@
 <google-map width="100%" height="100%" [center]="center" [options]="options" [zoom]="zoom">
+  <!-- [label]="marker.label" -->
   <map-marker *ngFor="let marker of markers"
               [position]="marker.position"
-              [label]="marker.label"
               [title]="marker.title"
-              [options]="marker.options"
-  ></map-marker>
+              [options]="marker.options"></map-marker>
 </google-map>
