--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,4 +62,12 @@
   background-color: #EEE;
   border-top: 1px solid #DDD;
   z-index: 1;
+  text-align: right;
+  font-size: 11px;
+
+  .footer-text {
+    position: relative;
+    top: 3px;
+    margin-right: 20px;
+  }
 }
